crates/nidus/tests/ui/injectable_plain_field.rs
use nidus::prelude::*;

#[injectable]
struct UsersRepository {
    database_url: String,
}

fn main() {}
